--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,7 +20,7 @@
     <div class="page-shadow"></div>
     <div class="mobile-panel">
         <div class="logo">
-            <a href="#">
+            <a href="../index.html">
                 <img src="../assets/img/canvix-black-header-logo.svg" alt="Canvix Logo">
             </a>
         </div>
