--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="projects">
                         <div class="project">
-                            <a href="portfolio/red-flower.html">
+                            <a href="portfolio/orange-moon.html">
                                 <div class="image-box">
                                     <img src="../assets/img/index/project-flower.jpg" alt="Pink flower in blue circle with orange elements in grey background">
                                 </div>
@@ -78,7 +78,7 @@
                             </a>
                         </div>
                         <div class="project">
-                            <a href="portfolio/nature-ui.html">
+                            <a href="portfolio/orange-moon.html">
                                 <div class="image-box">
                                     <img src="../assets/img/index/project-bird.jpg" alt="Abstract figure with nature landscape, birds, animals and butterflies">
                                 </div>
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <div class="project">
-                            <a href="portfolio/travel-ui.html">
+                            <a href="portfolio/orange-moon.html">
                                 <div class="image-box">
                                     <img src="../assets/img/index/project-travel.jpg" alt="Traveller near sun in abstract round nature landscape">
                                 </div>
@@ -105,7 +105,7 @@
                             </a>
                         </div>
                         <div class="project">
-                            <a href="portfolio/travel-ui.html">
+                            <a href="portfolio/orange-moon.html">
                                 <div class="image-box">
                                     <img src="../assets/img/portfolio/project-figures.jpg" alt="Colourful figures on blue background">
                                 </div>
@@ -114,7 +114,7 @@
                             </a>
                         </div>
                         <div class="project">
-                            <a href="portfolio/travel-ui.html">
+                            <a href="portfolio/orange-moon.html">
                                 <div class="image-box">
                                     <img src="../assets/img/portfolio/project-cube.jpg" alt="Colourful cube">
                                 </div>
