--- a/pages/contact.html
+++ b/pages/contact.html
@@ -208,34 +208,7 @@
     </div>
     <script src="../assets/js/harmburger.js"></script>
     <script src="../assets/js/placeholder.js"></script>
-    <script src="../assets/js/jquery-3.7.1.min.js"></script>
-    <script>
-        const myIcon = L.icon({
-            iconUrl: '../assets/plugins/leaflet/images/marker-icon.png',
-            iconSize: [25, 41],
-            iconAnchor: [12, 43],
-            popupAnchor: [1, -43],
-            shadowUrl: '../assets/plugins/leaflet/images/marker-shadow.png',
-            shadowSize: [41, 41],
-            shadowAnchor: [12, 43]
-        });
-
-        $(".initMap").click(() => {
-            $("#map").html('')
-            initMap()
-        })
-
-        function initMap() {
-            const map = L.map('map').setView([30.406505449363866, -88.96498995001923], 16);
-
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a>'
-            }).addTo(map);
-
-            L.marker([30.406505449363866, -88.96498995001923], { icon: myIcon }).addTo(map).bindPopup('Canvix location')
-        }
-    </script>
-
+    <script src="../assets/js/map.js"></script>
 </body>
 
 </html>
